# randomvars

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: tests.yml
experiments/: PaCal.py  README.md  convert_applications.py  discrete.py  downgrid.py  downgrid_cdf.py  downgrid_cont_benchmarks.py  downgrid_cont_benchmarks_output.csv  downgrid_xp.py  downgrid_xy.py  from_rv.py  from_sample.py  inheritance.py  mixture.py  regrid.py  regrid_old.py  retype.py  smooth.py  splines.py  uniform_approx.py  upgrid_xy.py
experiments/downgrid_maxtol/: README.md  downgrid_maxtol.pyx  setup.py
experiments/regrid_maxtol/: README.md  build.sh  regrid_maxtol.pyx  setup.py
randomvars/: __init__.py  _boolean.py  _cont.py  _continuous.py  _discrete.py  _mixture.py  _random.py  _rv_piecelin.py  _utils.py  _utilsgrid.py  downgrid_maxtol.c  downgrid_maxtol.pyx  options.py  regrid_maxtol.c  rv_cont.py  rv_piecelin.py
randomvars/tests/: commontests.py  test__boolean.py  test__cont.py  test__continuous.py  test__discrete.py  test__mixture.py  test__random.py  test__utils.py  test__utilsgrid.py  test_options.py  test_rv_cont.py  test_rv_piecelin.py
