[tool.poetry]
name = "randomvars"
version = "0.0.0.9000"
description = "Work with Random Variables"
authors = ["Evgeni Chasnovski <evgeni.chasnovski@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "http://github.com/echasnovski/randomvars"
keywords = ['randomvars', 'random', 'distributions']
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16.0"
scipy = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
cython = "^0.29.20"
black = {version = "^20.8b1", allow-prereleases = true}
pre-commit = { version = "^2.6", python = "^3.7" }
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | experiments
)/
'''

[tool.coverage.run]
omit = ["randomvars/tests/*"]

[build-system]
requires = [
    "poetry >= 1.0",
    "numpy >= 1.16.0",
    "cython >= 0.28"
]
build-backend = "poetry.masonry.api"
